bk_ida/gccida/c0/allocate_dynamic_stack_space
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1640:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1645:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1647:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1649:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1655:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1657:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v22; // [rsp+24h] [rbp-6Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1658:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // [rsp+34h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1662:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+70h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1721:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1722:17: error: invalid suffix 'xmode' on integer constant
if ( *(short *)0xmode == VOIDmode ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1723:33: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
mode = *( ( unsigned __int16 *)&insn_data_0[1234].operand[1] + 8); 
                                ^~~~~~~~~~~
                                insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/explow.c:1724:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
pred = insn_data_0[1234].operand[1].predicate; 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/allocate_dynamic_stack_space/src/obj/explow.o] Error 1
